--- a/task1.html
+++ b/task1.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF_8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>任务1-九宫格</title>
 		<link rel="stylesheet" href="task.css" type="text/css" />
 	</head>
