--- a/task1.html
+++ b/task1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
 	<head>
-		<meta charset="UTF_8">
+		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>任务1-九宫格</title>
 		<link rel="stylesheet" href="task.css" type="text/css" />
