--- a/task4/task4.html
+++ b/task4/task4.html
@@ -7,8 +7,7 @@
 </head>
 <body>
     <header>
-        <p><span class="left">关闭</span>
-        <span class="middle">登陆</span>
+        <p><span class="left">关闭</span>登陆
         <span class="right">注册</span></p>
     </header>
     <table>
