布局修改，滚动条修正。
Signed-off-by: Galu <sky_ctl@hotmail.com>

--- a/task5/task5.html
+++ b/task5/task5.html
@@ -15,7 +15,7 @@
             <img src="images/head.png" alt="">
         </div>
         <div class="info">
-            <p>高素雅 51岁</p>
+            <p>高素雅&nbsp;&nbsp;51岁</p>
             <p class="local">&nbsp;&nbsp;&nbsp;&nbsp;北京.通州.果园</p>
         </div>
     </div>
@@ -42,7 +42,7 @@
                     <span class="price">25元/小时</span>
                 </li>
                 <li>
-                    <span class="label">自我介绍</span>
+                    <span class="self">自我介绍</span>
                     <span class="intro"> 可以洗衣、做饭、照顾老人。在护工方面有5年的经验，经验丰富。</span>
                 </li>
             </ul>
