--- a/task6/task6.html
+++ b/task6/task6.html
@@ -78,11 +78,11 @@
         </div>
     </main>
     <footer>
-            <span class="img1">
+            <span class="img1">首页
             </span>
             <span class="img2">
             </span>
-            <span class="img3">
+            <span class="img3">我的
             </span>
     </footer>
 
